# lib-tdt

./: CMakeFunctions.txt  CMakeLists.txt  CMakeTargetFunctions.txt  README.MD  compile.sh
Application/API/: channel_registry.h  data_network.h  data_source_base.h  data_source_own_thread.h  plugin_api.h  plugin_api_types.h  result_type.h  simple_data_source.h
Application/API/internal/: channel_registry.inl  data_network.inl
Application/Plugins/common/: detection_event_type.h  os_name.h  plugin_type_ids_info.h
Application/Plugins/csv_telemetry_recorder/: CMakeLists.txt  csv_telemetry_recorder.cpp  csv_telemetry_recorder.h  csv_telemetry_recorder.inl  csv_telemetry_recorder_types.h
Application/Plugins/library_reporter/: CMakeLists.txt  library_reporter.cpp  library_reporter.h  library_reporter.inl
Application/Plugins/pmu_publisher/: CMakeLists.txt  driver_interface.h  lbr_config.h  lbr_config_agent.cpp  lbr_config_agent.h  pmu_config_agent.cpp  pmu_config_agent.h  pmu_publisher.cpp  pmu_publisher.h  pmu_publisher_types.h
Application/Plugins/pmu_publisher/linux/: driver.h  driver_interface_impl.cpp  driver_interface_impl.h  event_group.cpp  event_group.h  pmu_event.cpp  pmu_event.h
Application/Plugins/process_monitor/: CMakeLists.txt  process_monitor.cpp  process_monitor.h  process_monitor_types.h  system_process.h
Application/Plugins/process_monitor/linux/: system_process_impl.cpp  system_process_impl.h
Driver/include/: threatdetect_defines.h  threatdetect_ioctl.h  threatdetect_struct.h  threatdetect_types.h  threatdetect_version.h
